@@ -142,6 +142,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Add apprtype and apprlevel parameters to filter list=allpages by protection types and levels
 * Add apdir parameter to enable listing all pages from Z to A
 * (bug 11721) Use a different title for results than for the help page.
+* (bug 11562) Added a user_registration parameter/field to the list=allusers query.
 
 === Languages updated in 1.12 ===
 
